user api 1.1 add userMomentList
